# SamsungKSUCourse2024

./: README.md
InnovationCampus/: Урок_02_Numpy.ipynb  Урок_03_Pandas.ipynb
KsuLessons/: Ансамбли в машинном обучении.ipynb  Введение_в_машинное_обучение_через_задачу_линейной_регрессии.ipynb  Деревья решений.ipynb  Классификация_метрические_и_линейные_методы.ipynb  Основы_классификации_изображений_часть_1.ipynb
defenses/1/: 1.odp  Untitled Diagram(1).drawio
defenses/2/: .gitignore  README.md  answers_test_model_name.txt  bm25_response_model.py  chat-Search-Engine-Evaluation-Metrics.md  ground_truths.txt  main.py  makefile  metrics.py  metrics_results.txt  new_response_model.py  project.md  pyproject.toml  questions.txt  response_model.py  sbert_ru_response_model.py  tree_builder.py  Защита 2 Файтельсон Антон.odp
defenses/2/database/1/: 1.txt
defenses/2/database/2/: 2.txt
defenses/2/tests/: answers_test_model_Sbert_ru_large.txt  answers_test_model_Sentence_transformer.txt  answers_test_model_bm25.txt
